--- a/index.html
+++ b/index.html
@@ -19,10 +19,25 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>Sydney</p>
-        <p>Tokyo</p>
-        <p>London</p>
-        <p>New York City</p>
+        <div id="sydney">
+            <h1>Sydney</h1>
+            <p id="sydney-time"></p>
+        </div>
+
+        <div id="tokyo">
+            <h1>Tokyo</h1>
+            <p id="tokyo-time"></p>
+        </div>
+
+        <div id="london">
+            <h1>London</h1>
+            <p id="london-time"></p>
+        </div>
+
+        <div id="nyc">
+            <h1>New York City</h1>
+            <p id="nyc-time"></p>
+        </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.1.1.min.js"><\/script>')</script>
