--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>What's The Time?</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,31 +20,27 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div id="sydney">
+        <section>
+        	<div id="sydney">
             <h1>Sydney</h1>
             <p id="sydney-time"></p>
-        </div>
+        	</div>
 
-        <div id="tokyo">
+        	<div id="tokyo">
             <h1>Tokyo</h1>
             <p id="tokyo-time"></p>
-        </div>
+        	</div>
 
-        <div id="london">
+        	<div id="london">
             <h1>London</h1>
             <p id="london-time"></p>
-        </div>
+        	</div>
 
-        <div id="nyc">
+        	<div id="nyc">
             <h1>New York City</h1>
             <p id="nyc-time"></p>
-        </div>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.1.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.1.1.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-        
+        	</div>
+        </section>
+        <script src="js/main.js"></script>        
     </body>
 </html>
